--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 <link rel="stylesheet" href="https://use.typekit.net/jqo0geg.css">
+<link href="https://fonts.googleapis.com/css?family=Permanent+Marker&display=swap" rel="stylesheet">
 
 @font-face {
         font-family: "steelfish";
