--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@
 }
 h1{
         font-family: 'Permanent Marker', cursive;
-        font-size: 50px;
+        font-size: 80px;
+        font-weight: normal;
 
 }
