--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 <link rel="stylesheet" href="https://use.typekit.net/jqo0geg.css">
 <link href="https://fonts.googleapis.com/css?family=Permanent+Marker&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Dosis&display=swap" rel="stylesheet">
 
 @font-face {
         font-family: "steelfish";
