--- a/style.css
+++ b/style.css
@@ -26,3 +26,12 @@ h1{
         font-weight: normal;
 
 }
+@media only screen and (max-width: 820px) {
+    .title{
+        line-height: 420%;
+        margin-bottom: 15%;
+    }
+    h2{
+        line-height: 200%;
+    }
+}
