--- a/skills.css
+++ b/skills.css
@@ -79,15 +79,15 @@ skills{
 }
 
 .progress-line.c span{
-    width: 45%;
+    width: 70%;
 }
 
-.progress-line.angular span{
-    width: 30%;
+.progress-line.react span{
+    width: 50%;
 }
 
 .progress-line.AWS span{
-    width: 20%;
+    width: 30%;
 }
 
 .progress-line.photoshop span{
@@ -102,7 +102,7 @@ skills{
     width: 70%;
 }
 .progress-line.maya span{
-    width: 60%;
+    width: 70%;
 }
 .progress-line.flstudio span{
     width: 60%;
