--- a/style.css
+++ b/style.css
@@ -113,6 +113,29 @@ img {
     padding: 30px 0;
     
 }
+            
+.backTop{
+    margin-top: 60px;
+    display: flex;
+    justify-content: center;
+    
+}
+
+.backButton{
+    border-radius: 30px;
+    padding: 25px 30px;
+    box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.1);
+    background-color: #f4f4f4;
+    text-decoration: none;
+    color: #222;
+    transition: 0.5s;
+    
+}
+
+.backButton:hover{
+    background-color: #ea81b5;
+    color: #f2f2f2;
+}
 
 footer {
     text-align: center;
