--- a/react-portfolio/src/index.css
+++ b/react-portfolio/src/index.css
@@ -1,3 +1,8 @@
+@font-face {
+  font-family: 'futura';
+  src: url(assets/fonts/Futura\ Heavy\ font.ttf) format('truetype');
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
