--- a/react-portfolio/src/App.css
+++ b/react-portfolio/src/App.css
@@ -9,11 +9,12 @@
     height: 100%;
     object-fit: cover;
     position: absolute;
+    background-image: linear-gradient(120deg, #404152, #1e1836);
 }
 
 .banner_title {
     color: white;
-    font-size: 3rem;
+    font-size: 8rem;
 
     display: inline-block; 
     text-align: left;
@@ -29,4 +30,11 @@
     position: absolute;
     background-image: linear-gradient(120deg, #404152, #1e1836);
     text-align: center;
+}
+
+.bannerContainer {
+    position: relative;
+    width: 100%;
+    height: 100vh;
+
 }
