--- a/react-portfolio/src/App.css
+++ b/react-portfolio/src/App.css
@@ -12,7 +12,7 @@
     text-align: left;
 
     padding: 20px;
-    
+    padding-top: 100px;
 }
 
 .banner {
@@ -31,11 +31,25 @@
 
 }
 
-.banner_image {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
+.navbar {
     position: absolute;
-    background-image: linear-gradient(120deg, #404152, #1e1836);
+    top: 0px;
+    padding: 2em 4em 4em;
+    background-color: transparent;
+    width: 100%;
 }
 
+.navbar a {
+    float: left;
+    display: block;
+    color: #f2f2f2;
+    padding: 14px 20px;
+    text-decoration: none;
+    transition: transform .2s;
+    font-size: 1.25rem;
+}
+
+.navbar a:hover {
+    transform: scale(1.2);
+    z-index: 5;
+}
