--- a/react-portfolio/src/components/Article.css
+++ b/react-portfolio/src/components/Article.css
@@ -2,10 +2,29 @@
     object-fit: cover;
     height: 200px;
     width: 200px;
-    margin: 15px;
+    margin: 30px;
+    margin-top: 0px;
+    margin-left: 0px;
 }
 
 .row{
     display: flex;
     justify-content: center;
+}
+
+.articleText{
+    text-align: left;
+    margin: 30px;
+    margin-top: 15px;
+}
+
+.articlePaper{
+    margin: 2em;
+}
+
+.articleTitle{
+    padding: 30px;
+    margin: 0px;
+    padding-bottom: 0px;
+    text-align: left;
 }
