--- a/react-portfolio/src/components/Article.css
+++ b/react-portfolio/src/components/Article.css
@@ -14,12 +14,14 @@
 
 .articleText{
     text-align: left;
-    margin: 30px;
-    margin-top: 15px;
+    margin: 0px;
+    padding: 30px;
+    padding-top: 15px;
 }
 
 .articlePaper{
-    margin: 2em;
+    margin-top: 40px;
+    margin-bottom: 40px;
 }
 
 .articleTitle{
