--- a/react-portfolio/src/Home.css
+++ b/react-portfolio/src/Home.css
@@ -1,9 +1,24 @@
 .bio{
     padding: 30px;
+    padding-top: 15px;
+    margin: 0px;
     text-align: left;
 }
 
 .bioPaper{
     margin-top: 40px;
     margin-bottom: 40px;
+}
+
+.bioHeader{
+    padding: 30px;
+    padding-bottom: 10px;
+    margin: 0px;
+    text-align: left;
+}
+
+.help{
+    width: 100%;
+    height: 150px;
+    background-color: red;
 }
