--- a/react-portfolio/src/components/player.css
+++ b/react-portfolio/src/components/player.css
@@ -4,13 +4,6 @@
     cursor: pointer;
 }
 
-.volumeSet{
-    position: fixed;
-    bottom: 40px;
-    margin: 20px;
-    left: 80%;
-}
-
 .mainPlayer{
     position: fixed;
     bottom: 0;
@@ -19,11 +12,35 @@
 
 .paperPlayer{
     width: 100%;
-    height: 175px;
+    height: 150px;
     position: fixed;
     bottom: 0;
     left: 0;
     background-color: white;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
     z-index: 10;
+}
+
+.musicButtons{
+    position: fixed;
+    bottom: 20px;
+    margin: 20px;
+    left: 10%;
+}
+
+.timeline{
+    position: fixed;
+    bottom: 20px;
+    margin: 20px;
+}
+
+.volumeSet{
+    position: fixed;
+    bottom: 20px;
+    margin: 20px;
+    left: 72%;
+}
+
+.volumeIcon{
+    cursor: pointer;
 }
