--- a/react-portfolio/src/components/player.css
+++ b/react-portfolio/src/components/player.css
@@ -16,7 +16,7 @@
     position: fixed;
     bottom: 0;
     left: 0;
-    background-color: white;
+    background-color: black;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
     z-index: 10;
 }
