--- a/react-portfolio/src/Home.css
+++ b/react-portfolio/src/Home.css
@@ -17,12 +17,6 @@
     text-align: left;
 }
 
-.bioSection{
-    width: 100%;
-    height: 100%;
-    background-image: linear-gradient(120deg, #404152, #1e1836);
-}
-
 .help{
     width: 100%;
     height: 150px;
@@ -37,23 +31,21 @@
     
 }
 
-.banner_title {
-    color: white;
-    font-size: 8rem;
-
-    display: inline-block; 
-    text-align: left;
-
-    padding: 20px;
-    padding-top: 100px;
-}
-
 .bioBanner {
     width: 100%;
     height: 100%;
     object-fit: cover;
     position: absolute;
-    background-image: linear-gradient(120deg, #d87660, #ea81b5);
+    text-align: center;
+    
+}
+
+.skillsBanner {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    position: absolute;
+    background-image: linear-gradient(120deg, #404152, #1e1836);
     text-align: center;
     
 }
