--- a/react-portfolio/src/components/circlebar.css
+++ b/react-portfolio/src/components/circlebar.css
@@ -1,9 +1,15 @@
+.circlePaper{
+    margin: 20px;
+    width: 340px;
+}
+
 .Circlebar{
     display: flex;
     row-gap: 20px;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    padding: 30px;
 }
 
 .circle-wrap {
@@ -14,6 +20,7 @@
     height: 300px;
     background: rgba(0,0, 0, 0.4);
     border-radius: 50%;
+    
 }
 
 .circle-wrap .circle .mask,
@@ -30,23 +37,23 @@
     clip: rect(0px, 300px, 300px, 150px);
 }
 
-.mask .fill-2 {
+.mask .fill-1 {
     clip: rect(0px, 150px, 300px, 0px);
-    background-image: linear-gradient(120deg, #d87660, #ea81b5);
+    background-color: #90caf9;
 }
 
-.mask.full-2,
-.circle .fill-2 {
-    animation: fill-2 ease-in-out 2s;
-    transform: rotate(117deg);
+.mask.full-1,
+.circle .fill-1 {
+    animation: fill-1 ease-in-out 2s;
+    transform: rotate(153deg);
 }
 
-@keyframes fill-2{
+@keyframes fill-1{
     0% {
         transform: rotate(0deg);
     }
     100% {
-        transform: rotate(117deg);
+        transform: rotate(153deg);
     }
 }
 
@@ -54,14 +61,22 @@
     width: 248px;
     height: 248px;
     border-radius: 50%;
-    background-image: linear-gradient(120deg, #404152, #1e1836);
-    line-height: 120px;
+    background-color:#121212;
+    background-image: linear-gradient(rgba(255, 255, 255, 0.07), rgba(255, 255, 255, 0.07));
+    line-height: 200px;
     text-align: center;
     margin-top: 26px;
     margin-left: 26px;
     color: white;
     position: absolute;
     z-index: 100;
-    font-weight: 700;
-    font-size: 2em;
+}
+
+.skillDesc{
+    text-align: left;
+}
+
+.circleTitle{
+    text-align: left;
+    margin-top: 0;
 }
