--- a/react-portfolio/src/App.css
+++ b/react-portfolio/src/App.css
@@ -21,7 +21,7 @@
     height: 100%;
     object-fit: cover;
     position: absolute;
-    -webkit-filter: brightness(60%);
+    filter: brightness(60%);
 }
 
 .centerBanner{
