--- a/react-portfolio/src/Home.css
+++ b/react-portfolio/src/Home.css
@@ -1,3 +1,7 @@
+.Home{
+    background: radial-gradient(circle at 75.1% 15.8%, rgb(36, 36, 36) 0%, rgb(0, 0, 0) 140.4%);
+}
+
 .bio{
     padding: 30px;
     padding-top: 15px;
@@ -17,12 +21,6 @@
     text-align: left;
 }
 
-.help{
-    width: 100%;
-    height: 150px;
-    background-color: red;
-}
-
 .skills{
     display: flex;
     flex-direction: column;
@@ -37,7 +35,6 @@
     object-fit: cover;
     position: absolute;
     text-align: center;
-    
 }
 
 .skillsBanner {
@@ -46,6 +43,7 @@
     object-fit: cover;
     position: absolute;
     text-align: center;
+    
 }
 
 .bannerContainer {
@@ -57,6 +55,8 @@
 
 .bannerContent {
     margin: 50px;
+    margin-left: 150px;
+    margin-right: 150px;
 }
 
 .pfp{
