--- a/react-portfolio/src/components/circlebar.css
+++ b/react-portfolio/src/components/circlebar.css
@@ -1,6 +1,6 @@
 .circlePaper{
     margin: 20px;
-    width: 340px;
+    width: 275px;
 }
 
 .Circlebar{
@@ -12,72 +12,14 @@
     padding: 30px;
 }
 
-.circle-wrap {
-    display: grid;
-    grid-template-columns: repeat(1, 160px);
-    grid-gap: 80px;
-    width: 300px;
-    height: 300px;
-    background: rgba(0,0, 0, 0.4);
-    border-radius: 50%;
-    
-}
-
-.circle-wrap .circle .mask,
-.circle-wrap .circle .fill-1,
-.circle-wrap .circle .fill-2,
-.circle-wrap .circle .fill-3 {
-    width: 300px;
-    height: 300px;
-    position: absolute;
-    border-radius: 50%;
-}
-
-.circle-wrap .circle .mask {
-    clip: rect(0px, 300px, 300px, 150px);
-}
-
-.mask .fill-1 {
-    clip: rect(0px, 150px, 300px, 0px);
-    background-color: #90caf9;
-}
-
-.mask.full-1,
-.circle .fill-1 {
-    animation: fill-1 ease-in-out 2s;
-    transform: rotate(153deg);
-}
-
-@keyframes fill-1{
-    0% {
-        transform: rotate(0deg);
-    }
-    100% {
-        transform: rotate(153deg);
-    }
-}
-
-.circle-wrap .inside-circle {
-    width: 248px;
-    height: 248px;
-    border-radius: 50%;
-    background-color:#121212;
-    background-image: linear-gradient(rgba(255, 255, 255, 0.07), rgba(255, 255, 255, 0.07));
-    line-height: 200px;
-    text-align: center;
-    margin-top: 26px;
-    margin-left: 26px;
-    color: white;
-    position: absolute;
-    z-index: 100;
-}
-
 .skillDesc{
     text-align: left;
+    margin-bottom: 0px;
 }
 
 .circleTitle{
     text-align: left;
     margin-top: 0;
-    font-size: 2em;
+    font-size: 1.5em;
+    
 }
