--- a/react-portfolio/src/Home.css
+++ b/react-portfolio/src/Home.css
@@ -17,28 +17,9 @@
     text-align: left;
 }
 
-.skills{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    
-}
-
-.bannerContainer {
-    position: relative;
-    width: 100%;
-    height: 100vh;
-
-}
-
-.bannerContent {
-    padding-top: 25px;
-}
-
 .pfp{
-    width: 200px;
-    height: 200px;
+    width: 175px;
+    height: 175px;
     margin: 25px;
     margin-top: 15px;
     border-radius: 50%;
@@ -54,3 +35,31 @@
     display: flex;
     justify-content: center;
 }
+
+.skills{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    
+}
+
+.skillRow{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+}
+
+.homeContainer {
+    position: relative;
+    width: 100%;
+    height: 100vh;
+
+}
+
+.bannerContent {
+    padding-top: 25px;
+}
+
+
