--- a/react-portfolio/src/components/ArtBox.css
+++ b/react-portfolio/src/components/ArtBox.css
@@ -2,8 +2,8 @@
     cursor: pointer;
 
     object-fit: cover;
-    height: 400px;
-    width: 400px;
+    height: 25vw;
+    width: 25vw;
 }
 
 .art_img:hover {
