--- a/react-portfolio/src/components/Article.css
+++ b/react-portfolio/src/components/Article.css
@@ -17,6 +17,7 @@
     margin: 0px;
     padding: 30px;
     padding-top: 15px;
+    padding-bottom: 24px;
 }
 
 .readMore{
@@ -24,6 +25,7 @@
     margin: 0px;
     padding: 30px;
     padding-top: 0px;
+    padding-left: 22px;
 }
 
 .articlePaper{
