--- a/react-portfolio/src/components/track.css
+++ b/react-portfolio/src/components/track.css
@@ -9,11 +9,10 @@
     cursor: pointer;
 }
 
+.trackStack{
+
+}
+
 .trackStack:hover {
-    -webkit-filter: brightness(60%);
-    -webkit-transition: all 0.5s ease;
-    -moz-transition: all 0.5s ease;
-    -o-transition: all 0.5s ease;
-    -ms-transition: all 0.5s ease;
-    transition: all 0.5s ease;
+    box-shadow: inset 0 0 100px 100px rgba(255, 255, 255, 0.1);
 }
