added richard track

--- a/react-portfolio/src/Art.css
+++ b/react-portfolio/src/Art.css
@@ -15,6 +15,6 @@
 }
 
 @keyframes translateAnimArt {
-    0%    { transform: translate(0, 100%) }
+    0%    { transform: translate(0, 100%); }
     100%  { transform: translate(0); }
   }
