compression page smurf

--- a/react-portfolio/src/App.css
+++ b/react-portfolio/src/App.css
@@ -65,8 +65,8 @@
 }
 
 @keyframes translateAnimFooter {
-    0%    { transform: translate(0, 100%) }
-    100%  { transform: translate(0); }
+    0%    { transform: translate(0, 100%); opacity: 0; }
+    100%  { transform: translate(0); opacity: 1;}
 }
 
 .icon-3d {
