--- a/react-portfolio/src/cspages/cspage.css
+++ b/react-portfolio/src/cspages/cspage.css
@@ -31,6 +31,7 @@
     opacity: 0;
 }
 .csImg-zoom{
+    opacity: 1;
     animation: translateAnimCSPage 1.25s;
 }
 
@@ -50,4 +51,8 @@
 
 .csImgSmall{
     width: 34vw;
+}
+
+.subText{
+    font-size: 1rem;
 }
